# IS-2122

./: .~lock.README.md#  README.md  comandos_git.html  informacion.txt
CASOS_USO/FuncionalidadesMaquina/: EliminarMaquina.txt  ListarMaquinasDisponibles.txt  ModificarMaquina.txt  MostrarMaquina.txt  MostrarMaquinas.txt  RegistrarMaquina.txt
CASOS_USO/FuncionalidadesReserva/: CancelarReserva.txt  ModificarReserva.txt  MostrarReserva.txt  MostrarReservas.txt  ReservarMaquina.txt
CASOS_USO/FuncionalidadesUsuarios/: EliminarCliente.txt  ModificarCliente.txt  MostrarCliente.txt  MostrarClientes.txt  RegistrarCliente.txt
DIAGRAMA DE CLASES/: ADMINISTRADOR_MAQUINA.txt  Clase_ADMINISTRADOR  Clase_ADMINISTRADOR_USUARIOS.txt  Clase_CLIENTE.txt  Clase_Maquina.txt  Clase_RESERVA.txt  Clase_USUARIO  Clase_Usuario.txt
DIAGRAMA_CASOS_USO/: ADMINISTRADOR  USUARIO
REQUISITOS_SISTEMA/: RequisitosFuncionales.txt  RequisitosInformacion.txt  RequisitosNoFuncionales.txt
codigo/proyecto507/src/: instrucciones.txt
codigo/proyecto507/src/fuentes/: CMakeLists.txt  MainProgram.cpp  MainProgram.hpp  administrador.cpp  administrador.hpp  administradorMaquina.cpp  administradorMaquina.hpp  administradorUsuarios.cpp  administradorUsuarios.hpp  cliente.cpp  cliente.hpp  funcionalidades.cpp  funcionalidades.hpp  usuario.cpp  usuario.hpp
codigo/proyecto507/src/tests/: AllTests.cpp  CMakeLists.txt  Plantilla para pruebas unitarias.docx  Plantilla para pruebas unitarias.odt  administradores.txt  usuarios.txt
historias_usuario/: 01_Mostrar_Maquina.md  historiasUsuario.txt
(+2 files in other folders)
